2.2.4 ONLY USE WITH TT-RSS COMMIT 25c8467753 OR NEWER! - NEW Quick_Unsubscribe: 2 hotkeys to speed up your cleaning rage - Force opacity = 1 for .header[stuck] - Give selected headline darker background for easier distinction - Fix feed name tag's color of selected headline - Remove .header[stuck]'s z-index (is now added to tt-rss itself) - Keyboard_Cursor: fix for refactoring of Article.cdmMoveToI to Headlines.scrollToArticleId in tt-rss commit 25c8467753

--- a/themes.local/feedmei.css
+++ b/themes.local/feedmei.css
@@ -235,10 +235,7 @@ div.cdm.expanded {
 	border: 1px solid #eee;
 }
 
-div.cdm .header[stuck] {
-	opacity: 1;
-	z-index: 1000;
-}
+div.cdm .header[stuck] { opacity: 1 !important }
 	div.cdm.expandable:not(.active) .header[stuck] { border-bottom-width: 0 }
 	div.cdm.expanded .header[stuck] {
 		margin: 0 -200%;
@@ -248,6 +245,8 @@ div.cdm .header[stuck] {
 #headlines-frame.normal,
 #headlines-frame .feed-title,
 #content-insert,
+div.cdm.expandable.Selected,
+body.ttrss_main .hl.Selected,
 div.cdm.expanded.active:not(.Unread),
 div.cdm.expandable.active:not(.Unread) {
 	background: #f9f9f9 !important;
@@ -261,6 +260,7 @@ div.cdm.expandable.active:not(.Unread) {
 div.cdm.active div.content,
 div.cdm.expanded.active div.header a.title,
 div.cdm.expandable.active div.header a.title,
+div.cdm.expandable.Selected:not(.active) a,
 body.ttrss_main .hl.active :not(i),
 body.ttrss_main .hl.active .feed a,
 body.ttrss_main .hl.active .hl-content a.title { color: #444 }
